--- a/package.json
+++ b/package.json
@@ -5,22 +5,30 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild": "rimraf dist",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
-    "algosdk": "^1.24.0",
     "chai": "^4.3.7",
+    "mocha": "^10.1.0",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "@ipld/dag-pb": "^2.0.1",
+    "algosdk": "^1.24.0",
+    "cid-tool": "^3.0.0",
     "cids": "^1.1.9",
     "is-ipfs": "^7.0.3",
     "is-url": "^1.2.4",
-    "mocha": "^10.1.0",
-    "multihashes": "^4.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "multiformats": "^9.9.0",
+    "multihashes": "^4.0.3"
   }
 }
