--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
     "algosdk": "^1.24.0",
+    "axios": "^1.2.1",
     "chai": "^4.3.7",
     "cids": "^1.1.9",
     "is-ipfs": "^7.0.3",
