--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nft-arcs",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Arcs abstraction for NFTs",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,13 +9,16 @@
     "prebuild": "rimraf dist",
     "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "Algorand",
+    "NFT",
+    "ARC"
+  ],
+  "author": "Indelve",
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
-    "axios": "^1.2.1",
     "chai": "^4.3.7",
     "mocha": "^10.1.0",
     "rimraf": "^3.0.2",
@@ -23,6 +26,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "algosdk": "^1.24.0",
     "cid-tool": "^3.0.0",
     "cids": "^1.1.9",
