Implement arc 3 tests

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --timeout 10000 -r ts-node/register 'test/**/*.ts' ",
     "prebuild": "rimraf dist",
     "build": "tsc"
   },
@@ -26,8 +26,8 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "axios": "^1.2.1",
     "algosdk": "^1.24.0",
+    "axios": "^1.2.1",
     "cid-tool": "^3.0.0",
     "cids": "^1.1.9",
     "is-url": "^1.2.4",
