--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "mocha --timeout 10000 -r ts-node/register 'test/**/*.ts' ",
+    "test": "mocha --timeout 10000 -r ts-node/register -r dotenv/config 'test/**/*.ts' ",
     "prebuild": "rimraf dist",
     "build": "tsc"
   },
@@ -20,6 +20,7 @@
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
     "chai": "^4.3.7",
+    "dotenv": "^16.0.3",
     "mocha": "^10.1.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
