--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nft-arcs",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Arcs abstraction for NFTs",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -22,6 +22,7 @@
     "chai": "^4.3.7",
     "dotenv": "^16.0.3",
     "mocha": "^10.1.0",
+    "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
