--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,4 +1,25 @@
 {
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Mocha Current File",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "args": [
+                "--inspect-brk",
+                "--timeout",
+                "10000",
+                "-r",
+                "ts-node/register",
+                "-r",
+                "dotenv/config",
+                "--colors",
+                "${file}",
+            ],
+            "cwd": "${workspaceRoot}"
+        }
+    ],
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
     },
